# gomoku

./: .coveragerc  .pylintrc  README.md  lint.sh  pyproject.toml  run.sh  run_with_time_log.sh  test.sh
.github/workflows/: pipeline.yml
documentation/: impelementation.md  implementation.md  specification.md  testing.md
documentation/reports/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: game_board.py  main.py
src/gomoku/: main.py
src/gomoku/core/: config.py  directions.py  game_board.py  helper.py  minimax.py  player_rows.py
src/gomoku/core/tests/: game_board_test.py  minimax_test.py  player_rows_test.py
src/gomoku/ui/: game_board_ui.py
src/gomuku/: main.py
src/gomuku/core/tests/: game_board_test.py
src/gomuku/ui/: game_board_ui.py
