[project]
name = "gomoku"
version = "0.1.0"
packages = [
    { include = "gomoku", from = "src" }
]
description = ""
authors = [
    {name = "hurbios",email = "15719468+hurbios@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.2,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "coverage (>=7.11.0,<8.0.0)"
]
